--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.1",
+    "highlight.js": "^11.7.0",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-highlight": "^0.15.0",
+    "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
