--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdi/js": "^7.1.96",
-    "@mdi/react": "^1.6.1",
+    "@svgr/webpack": "^6.5.1",
+    "axios": "^1.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
