--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.3.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
