--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bokeh/bokehjs": "^3.0.3",
+    "@bokeh/numbro": "^1.6.2",
+    "@bokeh/slickgrid": "^2.4.4102",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.1",
+    "choices.js": "^10.2.0",
+    "flatbush": "^4.0.0",
+    "flatpickr": "^4.6.13",
+    "hammerjs": "^2.0.8",
     "highlight.js": "^11.7.0",
+    "mathjax-full": "^3.2.2",
     "next": "13.1.6",
+    "nouislider": "^15.7.0",
+    "proj4": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
-    "tailwind-merge": "^1.9.1"
+    "regl": "^2.1.0",
+    "sprintf-js": "^1.1.2",
+    "tailwind-merge": "^1.9.1",
+    "timezone": "^1.0.23",
+    "underscore.template": "^0.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
