--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@bokeh/slickgrid": "^2.4.4102",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.1",
     "choices.js": "^10.2.0",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
+    "react-redux": "^8.0.5",
     "regl": "^2.1.0",
     "sprintf-js": "^1.1.2",
     "tailwind-merge": "^1.9.1",
