--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
+    "react-use": "^17.4.0",
     "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
