--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
+    "react-markdown": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.13",
