--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "tailwind-merge": "^1.9.1",
     "timezone": "^1.0.23",
     "underscore.template": "^0.1.7",
-    "react-use": "^17.4.0",
-    "tailwind-merge": "^1.9.1"
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
