--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
+    "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-use": "^17.4.0",
     "regl": "^2.1.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "sprintf-js": "^1.1.2",
     "tailwind-merge": "^1.9.1",
     "timezone": "^1.0.23",
-    "underscore.template": "^0.1.7",
-    "react-use": "^17.4.0",
-    "react-markdown": "^8.0.5",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
-    "tailwind-merge": "^1.9.1"
+    "underscore.template": "^0.1.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
