--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
     "react-markdown": "^8.0.5",
+    "react-panel": "^0.0.5",
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
