--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.1",
+    "base-64": "^1.0.0",
     "choices.js": "^10.2.0",
     "flatbush": "^4.0.0",
     "flatpickr": "^4.6.13",
