--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.1",
-    "base-64": "^1.0.0",
     "choices.js": "^10.2.0",
     "flatbush": "^4.0.0",
     "flatpickr": "^4.6.13",
     "hammerjs": "^2.0.8",
     "highlight.js": "^11.7.0",
     "mathjax-full": "^3.2.2",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "nouislider": "^15.7.0",
     "proj4": "^2.8.1",
