--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,9 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "paths": {
+      "@/components/*": ["./components/*"],
+      "@/store/*": ["./store/*"]
+  }
 }
