installed react-nprogress

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^6.5.1",
+    "@tanem/react-nprogress": "^5.0.32",
     "axios": "^1.3.1",
     "choices.js": "^10.2.0",
     "flatbush": "^4.0.0",
@@ -26,11 +27,13 @@
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nouislider": "^15.7.0",
+    "nprogress": "^0.2.0",
     "proj4": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
     "react-markdown": "^8.0.5",
+    "react-nprogress": "^0.1.6",
     "react-panel": "^0.0.5",
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
