--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5"
   }
