fetch profile picture at refresh

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_BACKEND_AUTH=http://localhost:8080
+NEXT_PUBLIC_OCR_SERVICE_URL='http://localhost:5000'
+ENDPOINTS={"bibliography":{"workspace":"http://localhost:8080/api/v1/bibliography-workspace/","afe":"http://localhost:8080/api/v1/bibliography-afe/","view":"http://localhost:8080/api/v1/bibliography/","workspace_holder_key":"bibliography_id"},"printed_well_report":{"workspace":"http://localhost:8080/api/v1/print-well-report-workspace/","afe":"http://localhost:8080/api/v1/print-well-report-workspace-afe/","view":"http://localhost:8080/api/v1/print-well-report/","workspace_holder_key":"print_well_report_id"},"services":{"sheets":"http://localhost:5050"}}
