--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@bokeh/bokehjs": "^2.4.3",
     "@bokeh/numbro": "^1.6.2",
     "@bokeh/slickgrid": "^2.4.4102",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
+    "@mui/icons-material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^6.5.1",
     "@tanem/react-nprogress": "^5.0.32",
