--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bokeh/bokehjs": "^2.4.3",
-    "@bokeh/numbro": "^1.6.2",
-    "@bokeh/slickgrid": "^2.4.4102",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mdi/js": "^7.1.96",
@@ -21,18 +18,11 @@
     "@svgr/webpack": "^6.5.1",
     "@tanem/react-nprogress": "^5.0.32",
     "axios": "^1.3.1",
-    "choices.js": "^10.2.0",
-    "flatbush": "^4.0.0",
-    "flatpickr": "^4.6.13",
-    "hammerjs": "^2.0.8",
     "highlight.js": "^11.7.0",
-    "mathjax-full": "^3.2.2",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nookies": "^2.5.2",
-    "nouislider": "^15.7.0",
     "nprogress": "^0.2.0",
-    "proj4": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0",
@@ -42,13 +32,9 @@
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
-    "regl": "^2.1.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "sprintf-js": "^1.1.2",
-    "tailwind-merge": "^1.9.1",
-    "timezone": "^1.0.23",
-    "underscore.template": "^0.1.7"
+    "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
