Refactor typescript files

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-use": "^17.4.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "sharp": "^0.32.1",
     "tailwind-merge": "^1.9.1"
   },
   "devDependencies": {
