--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
+    "@types/react-highlight": "^0.12.5",
     "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
