Fixed typescript svg import by adding custom svg definition to ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "utils/check.js"
-, "components/toast/toast.tsx"  ],
+    "utils/check.js",
+    "components/toast/toast.tsx",
+    "svg.d.ts",
+  ],
   "exclude": [
     "node_modules"
   ],
