--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-panel": "^0.0.5",
     "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tabulator": "^0.18.1",
     "react-use": "^17.4.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
